# reasoning-grounded-explanations

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
explainable_llms/: dataset_generator.py  evaluation.py  llm.py  problem.py  training.py  utils.py
explainable_llms/model/: classifier.py  decision_tree.py  logistic_regressor.py
scripts/: build_results_table.py  calculate_accuracy.py  create_tree_depths_plot.py  get_detailed_metrics.py  run_decision_tree_icl_set.sh  run_decision_tree_set.sh  run_experiment.py  run_experiment_sets.sh  run_logistic_regressor_icl_set.sh  run_logistic_regressor_set.sh  run_multi.sh  run_nlp_decision_tree_set.sh
tests/: conftest.py  test_dataset_generator.py  test_decision_tree.py  test_finetuning.py  test_logistic_regressor.py  test_prompting.py  utils.py
